# CLI_Manager

./: CMakeLists.txt  logo.rc  main.cpp  readme.md
app/inc/: AppState.h  CLIProcess.h  Manager.h  TrayIcon.h  Units.h
app/src/: AppState.cpp  CLIProcess.cpp  Manager.cpp  TrayIcon.cpp  Units.cpp
